--- a/style.css
+++ b/style.css
@@ -1,84 +1,144 @@
 
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Outfit:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&family=Nunito+Sans:wght@200&family=Outfit&display=swap');
 *{
-    padding:0;
     margin:0;
+    padding:0;
+   box-sizing: border-box;
 
-    box-sizing: border-box;
-  
-    font-family: 'Outfit', sans-serif;
 }
 body{
-    background-color: hsl(212, 45%, 89%);
-    font-size: 15px;
-    font-weight: bold;
-}
-
-article{
-    display:grid;
+    
+    background-color:
+    hsl(233, 47%, 7%) ;
     min-height: 100vh;
-  
-    
-    
+
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
+
 }
+
+
 .card{
-    
-    align-items: center;
-    height:25rem;
-    width: 15rem;
-    background-color: hsl(0, 0%, 100%);
-    place-self: center;
 
-
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-.content{
-    align-items: center;
-    text-align:center;
-    margin:7px;
-    padding:10px;
-
-
-}
-img{
-    margin:12px;
-    width:90%;
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: hsl(244, 38%, 16%);
+  
+    max-width:600px;
     border-radius: 5px;
 }
 
-/*
-p,h1{
-    margin:0;   text-align: center;
-    background-color: hsl(0, 0%, 100%);
-    flex-wrap: nowrap;
-}*/
-p{
-   color: hsl(220, 15%, 55%);
-   font-family: 'Nunito Sans', sans-serif;
-   margin-top: 10px;
-   padding-top: 5px;
-   text-indent: -1em;
 
+
+span{
+    color: hsl(277, 64%, 61%);
+}
+h1{
+    color:hsl(0, 0%, 100%);
+}
+p{
+    color: hsla(0, 0%, 100%, 0.75);
+    padding-top:15px;
+}
+ul{
+    display:grid;
+    grid-template-columns: 2px 2px 2px;
+  
+    justify-content: space-evenly;
+    justify-items:center;
+
+    list-style-type: none;
+    color:hsla(0, 0%, 100%, 0.75);
+    padding-top:15px;
+    padding-left:0;
 }
 h3{
-   margin:0px;
-    color: hsl(218, 44%, 22%);
+    color: hsl(0, 0%, 100%);
+}
+
+@media screen and (max-width: 1440px){
+    .card .mg{
+        background: url(images/image-header-desktop.jpg);
+        border-radius: 0 5px 5px 0;
+        background-size: cover;
     
-
-
-
+    }
+    
+    
+    .card .mg .overlay{
+        border-radius: 0 5px 5px 0;
+        width:100%;
+        height:100%;
+        background:rgba(111, 7, 142, 0.7);}
+     .card .content{
+        margin:30px;
+    }
+    
 }
 
+@media screen and (max-width: 600px) {
+    body {
+      background-color: olive;
+      
+ 
+    }
+    
+    .card{
+        text-align: center;
+       display:flex;
+        background-color: hsl(244, 38%, 16%);
+        border-radius: 5px;
+        min-height:100px;
+        max-width: 370px;
+        
+        flex-direction: column-reverse;
+      
+        max-width: 350px;
+    }
+    
+    .card .mg{
+     
+        content: url(images/image-header-mobile.jpg);
+        border-radius: 5px 5px 0px 0;
+        background-size: cover;
+        
+      
+    
+    }
 
-@media screen and(max-width: 1440px) and (max-width: 700px) {
- .card{
-    display: flex;
- }
-}
+    .card .mg .overlay{
+        border-radius: 0 5px 5px 0;
+        background:rgba(111, 7, 142, 0.7);
+      
+        height:100%;
+        width:100%;
+        overflow: hidden;
 
+    
+    }
+     .card .content{
+        margin:10px;
+        padding:16px;
+    }
+    ul{
+        display:block;
+        grid-template-columns: repeat(1, 1fr);
 
-
-
+        list-style-type: none;
+        color:hsla(0, 0%, 100%, 0.75);
+        padding-top:10px;
+        padding-left:0;
+    }
+    li{
+     
+        padding:5px;
+    }
+    }
+  
+   
+    
+  
 
